<resources>
    <string name="app_name">Lab4</string>
    <string name="name">SIGN UP</string>
    <string name="nam10">Email</string>
    <string name="nam2">Telephone</string>
    <string name="nam3">Password</string>
    <string name="nam4">Retype-password</string>
    <string name="nam6">cancel</string>
    <string name="nam7">register</string>
    <string name="nam9">register</string>
    <string name="channel_name">Notification</string>
    <string name="channel_description">This is redicect to registraton</string>
    <string name="nam11">Retype-password</string>
</resources>
